--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 I've also spent two summers interning at <a class="in-text" href="https://research.ibm.com/labs/india/" target="_blank">IBM Research India</a> 
                 and ShareChat working on NLP and creative text generation. <br> <br>
 
-                 I graduated with a B.Tech and M.Tech in Indofmation Technology from <a class="in-text"
+                 I graduated with a B.Tech and M.Tech in Information Technology from <a class="in-text"
                      href="http://www.iiitm.ac.in/index.php/en/" target="_blank">ABV-IIITM, Gwalior</a>, India in 2020.  <br> <br>
                      
                  For more details, check out my <a class="in-text" href="https://drive.google.com/file/d/1e5aiK7m27_c_wYL7zNaQK0vydPCXqDu2/" target="_blank">CV</a> or hit me up
