--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
             <div class="col-md-8 pt-5 about">
                  I am a Pre-Doctoral Researcher at <a class="in-text"
                      href="https://research.google/teams/india-research-lab/"
-                     target="_blank">Google Research India</a>, where I work with <a class="in-text"
+                     target="_blank">Google Research India</a> working with <a class="in-text"
                      href="https://scholar.google.co.in/citations?user=lXbPKmkAAAAJ" target="_blank">Dr. Pradeep Shenoy</a> and
                  <a class="in-text" href="http://www.cns.iisc.ac.in/home/people/sridharan-devarajan/"
                      target="_blank">Dr. Sridharan Devarajan</a>. Curently, I am interested in robust and interpretable 
-                     AI methods with a focus in deep probabilistic modelling. <br> <br>
+                     AI methods with a focus on deep generative modelling. <br> <br>
 
 
                  In the past, I've worked on multimodal representation learning for my Masters thesis, advised by 
                     <a class="in-text" href="https://scholar.google.co.in/citations?user=f-HKhYwAAAAJ" target="_blank">
-                        Dr. Pramod Kumar Singh</a> and <a class="in-text" href="https://scholar.google.co.in/citations?user=gpNGJWIAAAAJ" target="_blank">
+                        Dr. Pramod Singh</a> and <a class="in-text" href="https://scholar.google.co.in/citations?user=gpNGJWIAAAAJ" target="_blank">
                             Atri Mandal</a> at <a class="in-text" href="https://research.ibm.com/labs/india/" target="_blank">IBM Research India</a>. 
-                I've also spent two summers interning at <a class="in-text" href="https://research.ibm.com/labs/india/" target="_blank">IBM Research India</a> 
-                and ShareChat working on NLP and creative text generation. <br> <br>
+                I've also spent two wonderful summers with  <a class="in-text" href="https://abhirut.github.io/" target="_blank">Abhirut Gupta</a> at <a class="in-text" href="https://research.ibm.com/labs/india/" target="_blank">IBM Research India</a> 
+                and <a class="in-text" href="https://scholar.google.co.in/citations?user=u4_rdCkAAAAJ" target="_blank">Debdoot Mukherjee</a> at <a class="in-text" href="https://we.sharechat.com/" target="_blank">ShareChat</a> working on NLP and creative text generation. <br> <br>
 
                  I graduated with a B.Tech and M.Tech in Information Technology from <a class="in-text"
                      href="http://www.iiitm.ac.in/index.php/en/" target="_blank">ABV-IIITM, Gwalior</a>, India in 2020.  <br> <br>
