--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                      target="_blank">Google Research India</a> working with <a class="in-text"
                      href="https://scholar.google.co.in/citations?user=lXbPKmkAAAAJ" target="_blank">Dr. Pradeep Shenoy</a> and
                  <a class="in-text" href="http://www.cns.iisc.ac.in/home/people/sridharan-devarajan/"
-                     target="_blank">Dr. Sridharan Devarajan</a>. Curently, I am interested in robust and interpretable 
+                     target="_blank">Dr. Sridharan Devarajan</a>. Currently, I am interested in robust and interpretable 
                      AI methods with a focus on deep generative modelling. <br> <br>
 
 
