--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                      target="_blank">Google Research India</a> working with <a class="in-text"
                      href="https://scholar.google.co.in/citations?user=lXbPKmkAAAAJ" target="_blank">Dr. Pradeep Shenoy</a> and
                  <a class="in-text" href="http://www.cns.iisc.ac.in/home/people/sridharan-devarajan/"
-                     target="_blank">Dr. Sridharan Devarajan</a>. Currently, I am interested in robust and interpretable 
-                     AI methods with a focus on deep generative modelling. <br> <br>
+                     target="_blank">Dr. Sridharan Devarajan</a>. Currently, my research interests lie in developing machine learning methods that are robust and interpretable. 
+                      I find great potential, and am particularly interested in leveraging probabilistic deep learning to achieve these goals. <br> <br>
 
 
                  In the past, I've worked on multimodal representation learning for my Masters thesis, advised by 
