Add EcoRL acceptance

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                     <p class="paper my-2 pl-2">
                         <span class="papertitle">Matching options to tasks using Option-Indexed Hierarchical Reinforcement Learning</span><br>
                         <span class="thisauthor">Kushal Chauhan</span>, Soumya Chatterjee, Pradeep Shenoy, Balaraman Ravindran<br>
-                        <span class="conf">In Submission, 2021</span><br>
+                        <span class="conf"><a class="confshort" href="https://sites.google.com/corp/view/ecorl2021/">EcoRL 2021</a> | 
+                            NeurIPS 2021 Workshop on Ecological Theory of Reinforcement Learning </span><br>
                     </p>   </div>
 
 
