--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                      href="https://scholar.google.co.in/citations?user=lXbPKmkAAAAJ" target="_blank">Dr. Pradeep Shenoy</a> and
                  <a class="in-text" href="http://www.cns.iisc.ac.in/home/people/sridharan-devarajan/"
                      target="_blank">Dr. Sridharan Devarajan</a>. Currently, my research interests lie in developing machine learning methods that are robust and interpretable. 
-                      I find great potential, and am particularly interested in leveraging principled probabilistic methods to achieve these goals. <br> <br>
+                      I am particularly interested in leveraging principled probabilistic methods to achieve these goals. <br> <br>
 
 
                  In the past, I've worked on multimodal representation learning for my Masters thesis, advised by 
