--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
                  <p class="header pt-5">Publications</p>
                  <div class="py-2">
                  <p class="paper my-2 pl-2">
-                     <span class="papertitle">Efficient remedies for outlier detection with variational autoencoders
+                     <span class="papertitle">Robust outlier detection by de-biasing VAE likelihoods
                     </span><br>
                      <span class="thisauthor">Kushal Chauhan</span>, Pradeep Shenoy, Manish Gupta, Devarajan Sridharan<br>
-                     <span class="conf">Preprint, 2021</span><br>
+                     <span class="conf"><a class="confshort" href="http://bayesiandeeplearning.org/">BDL 2021</a> | 
+                        NeurIPS 2021 Workshop on Bayesian Deep Learning </span><br>
                      <a class="tag" href="https://arxiv.org/pdf/2108.08760.pdf" target="_blank">pdf</a><span class="tagsep">|</span>
                      <a class="tag" href="https://arxiv.org/abs/2108.08760" target="_blank">abstract</a><span class="tagsep">|</span>
                      <a class="tag" href="cites/arxiv2021.bib" target="_blank">cite</a>
