Add links to workshop pdfs and poster

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
                      <span class="thisauthor">Kushal Chauhan</span>, Pradeep Shenoy, Manish Gupta, Devarajan Sridharan<br>
                      <span class="conf"><a class="confshort" href="http://bayesiandeeplearning.org/">BDL 2021</a> | 
                         NeurIPS 2021 Workshop on Bayesian Deep Learning </span><br>
-                     <a class="tag" href="https://arxiv.org/pdf/2108.08760.pdf" target="_blank">pdf</a><span class="tagsep">|</span>
-                     <a class="tag" href="https://arxiv.org/abs/2108.08760" target="_blank">abstract</a><span class="tagsep">|</span>
-                     <a class="tag" href="cites/arxiv2021.bib" target="_blank">cite</a>
+                     <a class="tag" href="http://bayesiandeeplearning.org/2021/papers/64.pdf" target="_blank">pdf</a><span class="tagsep">|</span>
+                     <a class="tag" href="https://neurips.cc/media/PosterPDFs/NeurIPS%202021/ea5d2f1c4608232e07d3aa3d998e5135_nI9AUjz.png" target="_blank">poster</a><span class="tagsep">|</span>
+                     <a class="tag" href="https://arxiv.org/abs/2108.08760" target="_blank">full arxiv version</a><span class="tagsep">|</span>
+                     <a class="tag" href="cites/bdl2021.bib" target="_blank">bibtex</a>
                  </p>
                  </div>
                 
@@ -85,6 +86,9 @@
                         <span class="thisauthor">Kushal Chauhan</span>, Soumya Chatterjee, Pradeep Shenoy, Balaraman Ravindran<br>
                         <span class="conf"><a class="confshort" href="https://sites.google.com/corp/view/ecorl2021/">EcoRL 2021</a> | 
                             NeurIPS 2021 Workshop on Ecological Theory of Reinforcement Learning </span><br>
+                            <a class="tag" href="https://drive.google.com/file/d/1k3NEu8ypcf0S5BNVv2mH38AIwTtmQEH0/view?usp=sharing" target="_blank">pdf</a><span class="tagsep">|</span>
+                            <a class="tag" href="https://neurips.cc/media/PosterPDFs/NeurIPS%202021/6ea9ab1baa0efb9e19094440c317e21b_n1oVEfn.png" target="_blank">poster</a><span class="tagsep">|</span>
+                            <a class="tag" href="cites/ecorl2021.bib" target="_blank">bibtex</a>
                     </p>   </div>
 
 
@@ -98,7 +102,7 @@
                      <a class="tag" href="https://aclanthology.org/2020.acl-main.284/" target="_blank">abstract</a><span class="tagsep">|</span>
                      <a class="tag" href="https://slideslive.com/38929176/improving-segmentation-for-technical-support-problems" target="_blank">video</a><span class="tagsep">|</span>
                      <a class="tag" href="https://github.com/kushalchauhan98/ticket-segmentation" target="_blank">data</a><span class="tagsep">|</span>
-                     <a class="tag" href="cites/acl2020.bib" target="_blank">cite</a> 
+                     <a class="tag" href="cites/acl2020.bib" target="_blank">bibtex</a> 
                  </p>
                  </div>
 
