Add rSWE posiiton update and citation for ICBMs.

--- a/index.html
+++ b/index.html
@@ -52,29 +52,28 @@
                 </div>
             </div>
             <div class="col-md-8 pt-5 about">
-                I am a Pre-Doctoral Researcher at <a class="in-text"
-                    href="https://research.google/teams/india-research-lab/" target="_blank">Google Research India</a>
-                working with <a class="in-text" href="https://scholar.google.co.in/citations?user=lXbPKmkAAAAJ"
-                    target="_blank">Dr. Pradeep Shenoy</a> and
-                <a class="in-text" href="http://www.cns.iisc.ac.in/home/people/sridharan-devarajan/" target="_blank">Dr.
-                    Sridharan Devarajan</a>. Currently, my research interests lie in developing machine learning methods
-                that are robust and interpretable.
-                I am particularly interested in leveraging principled probabilistic methods to achieve these goals. <br>
+                I am a Research Software Engineer at <a class="in-text"
+                    href="https://research.google/teams/india-research-lab/" target="_blank">Google Research</a>
+                working with <a class="in-text" href="https://scholar.google.co.in/citations?user=pWE12D4AAAAJ"
+                    target="_blank">Dr. Aravindan Raghuveer</a> on privacy preserving deep learning. Before this, I was
+                a Pre-Doctoral Researcher at Google Research, where I worked with <a class="in-text"
+                    href="https://scholar.google.co.in/citations?user=lXbPKmkAAAAJ" target="_blank">Dr. Pradeep
+                    Shenoy</a> on robust and interpretable deep learning. <br>
                 <br>
 
 
-                In the past, I've worked on multimodal representation learning for my Masters thesis, advised by
-                <a class="in-text" href="https://scholar.google.co.in/citations?user=f-HKhYwAAAAJ" target="_blank">
-                    Dr. Pramod Singh</a> and <a class="in-text"
-                    href="https://scholar.google.co.in/citations?user=gpNGJWIAAAAJ" target="_blank">
-                    Atri Mandal</a> at <a class="in-text" href="https://research.ibm.com/labs/india/"
-                    target="_blank">IBM Research India</a>.
-                I've also spent two wonderful summers with <a class="in-text" href="https://abhirut.github.io/"
+                In the past, I've spent two wonderful summers with <a class="in-text" href="https://abhirut.github.io/"
                     target="_blank">Abhirut Gupta</a> at <a class="in-text" href="https://research.ibm.com/labs/india/"
                     target="_blank">IBM Research India</a>
                 and <a class="in-text" href="https://scholar.google.co.in/citations?user=u4_rdCkAAAAJ"
                     target="_blank">Debdoot Mukherjee</a> at <a class="in-text" href="https://we.sharechat.com/"
-                    target="_blank">ShareChat</a> working on NLP and creative text generation. <br> <br>
+                    target="_blank">ShareChat</a> working on NLP and creative text generation.
+                I've also worked on multimodal representation learning for my Masters thesis, advised by
+                <a class="in-text" href="https://scholar.google.co.in/citations?user=f-HKhYwAAAAJ" target="_blank">
+                    Dr. Pramod Singh</a> and <a class="in-text"
+                    href="https://scholar.google.co.in/citations?user=gpNGJWIAAAAJ" target="_blank">
+                    Atri Mandal</a> at <a class="in-text" href="https://research.ibm.com/labs/india/"
+                    target="_blank">IBM Research India</a>.<br> <br>
 
                 I graduated with a B.Tech and M.Tech in Information Technology from <a class="in-text"
                     href="http://www.iiitm.ac.in/index.php/en/" target="_blank">ABV-IIITM, Gwalior</a>, India in 2020.
@@ -86,6 +85,32 @@
                 on my <a class="in-text" href="mailto:kushalchauhan98@gmail.com">email</a>.
 
                 <p class="header pt-5">Publications</p>
+                <div class="py-2">
+                    <p class="paper my-2 pl-2">
+                        <span class="papertitle">Interactive Concept Bottleneck Models
+                        </span><br>
+                        <span class="thisauthor">Kushal Chauhan</span>, Rishabh Tiwari, Jan Freyberg, Pradeep Shenoy,
+                        Krishnamurthy Dvijotham<br>
+                        <span class="conf"><a class="confshort" href="https://aaai.org/Conferences/AAAI-23/">AAAI
+                                2023</a> |
+                            The 37th AAAI Conference on Artificial Intelligence </span><br>
+                    
+
+                        <span class="conf" style="line-height: 150%; font-size: 10pt; margin-top:4pt">Previouly appeared
+                            at <a class="confshort" href="https://neurips-hill.github.io/">NeurIPS 2022 Workshop on
+                                Human in the Loop Learning </a>
+                            <br>
+                            <a class="tag" style="line-height: 150%; font-size: 10pt"
+                                href="https://drive.google.com/file/d/1yG3PVRZJ36w9AzaKtSWcnkSsvWr_Qlbc/" target="_blank">pdf</a><span
+                                class="tagsep">|</span>
+                            <a class="tag" style="line-height: 150%; font-size: 10pt"
+                                href="https://neurips.cc/media/PosterPDFs/NeurIPS%202022/64437.png"
+                                target="_blank">poster</a>
+                        </span>
+                    </p>
+                </div>
+
+
                 <div class="py-2">
                     <p class="paper my-2 pl-2">
                         <span class="papertitle">Robust outlier detection by de-biasing VAE likelihoods
@@ -142,9 +167,9 @@
                     <p class="paper my-2 pl-2">
                         <span class="papertitle">Improving Segmentation for Technical Support Problems</span><br>
                         <span class="thisauthor">Kushal Chauhan</span>, Abhirut Gupta<br>
-                        <span class="conf"><a class="confshort" href="https://acl2020.org/">ACL 2020</a> | Annual
-                            Conference of the Association for Computational
-                            Linguistics</span><br>
+                        <span class="conf"><a class="confshort" href="https://acl2020.org/">ACL 2020</a> | The 58th
+                            Annual Meeting of the Association for
+                            Computational Linguistics</span><br>
                         <a class="tag" href="https://aclanthology.org/2020.acl-main.284.pdf"
                             target="_blank">pdf</a><span class="tagsep">|</span>
                         <a class="tag" href="https://aclanthology.org/2020.acl-main.284/"
