--- a/index.html
+++ b/index.html
@@ -110,6 +110,29 @@
                     </p>
                 </div>
 
+                <div class="py-2">
+                    <p class="paper my-2 pl-2">
+                        <span class="papertitle">Matching options to tasks using Option-Indexed Hierarchical
+                            Reinforcement Learning</span><br>
+                        <span class="thisauthor">Kushal Chauhan</span>, Soumya Chatterjee, Akash Reddy, Aniruddha S, Pradeep Shenoy, Balaraman
+                        Ravindran<br>
+                        <span class="conf"><a class="confshort" href="https://aamas2023.soton.ac.uk/">AAMAS 2023</a> |
+                            22nd International Conference on Autonomous Agents and Multiagent Systems </span><br>
+                
+
+                    <span class="conf" style="line-height: 150%; font-size: 10pt; margin-top:4pt">Previouly appeared
+                        at <a class="confshort" href="https://sites.google.com/corp/view/ecorl2021/"> 
+                            NeurIPS 2021 Workshop on Ecological Theory of Reinforcement Learning </a>
+                        <br>
+                        <a class="tag"
+                            href="https://drive.google.com/file/d/1k3NEu8ypcf0S5BNVv2mH38AIwTtmQEH0/view?usp=sharing"
+                            target="_blank">pdf</a><span class="tagsep">|</span>
+                        <a class="tag"
+                            href="https://neurips.cc/media/PosterPDFs/NeurIPS%202021/6ea9ab1baa0efb9e19094440c317e21b_n1oVEfn.png"
+                            target="_blank">poster</a><span class="tagsep">
+                    </span>
+                </p>
+                </div>
 
                 <div class="py-2">
                     <p class="paper my-2 pl-2">
@@ -139,26 +162,6 @@
                                 href="https://neurips.cc/media/PosterPDFs/NeurIPS%202021/ea5d2f1c4608232e07d3aa3d998e5135_nI9AUjz.png"
                                 target="_blank">poster</a>
                         </span>
-                    </p>
-                </div>
-
-
-                <div class="py-2">
-                    <p class="paper my-2 pl-2">
-                        <span class="papertitle">Matching options to tasks using Option-Indexed Hierarchical
-                            Reinforcement Learning</span><br>
-                        <span class="thisauthor">Kushal Chauhan</span>, Soumya Chatterjee, Pradeep Shenoy, Balaraman
-                        Ravindran<br>
-                        <span class="conf"><a class="confshort"
-                                href="https://sites.google.com/corp/view/ecorl2021/">EcoRL 2021</a> |
-                            NeurIPS 2021 Workshop on Ecological Theory of Reinforcement Learning </span><br>
-                        <a class="tag"
-                            href="https://drive.google.com/file/d/1k3NEu8ypcf0S5BNVv2mH38AIwTtmQEH0/view?usp=sharing"
-                            target="_blank">pdf</a><span class="tagsep">|</span>
-                        <a class="tag"
-                            href="https://neurips.cc/media/PosterPDFs/NeurIPS%202021/6ea9ab1baa0efb9e19094440c317e21b_n1oVEfn.png"
-                            target="_blank">poster</a><span class="tagsep">|</span>
-                        <a class="tag" href="cites/ecorl2021.bib" target="_blank">bibtex</a>
                     </p>
                 </div>
 
