--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
                 <div class="py-2">
                     <p class="paper my-2 pl-2">
                         <span class="papertitle">Shaken, and Stirred: Long-Range Dependencies Enable Robust Outlier Detection with PixelCNN++                        </span><br>
-                        Barath Mohan U, <span class="thisauthor">Kushal Chauhan</span>, Soumya Chatterjee, Pradeep Shenoy, Devarajan Sridharan
-                        Ravindran<br>
+                        Barath Mohan U, <span class="thisauthor">Kushal Chauhan</span>, Soumya Chatterjee, Pradeep Shenoy, Devarajan Sridharan<br>
                         <span class="conf"><a class="confshort" href="https://ijcai-23.org/">IJCAI 2023</a> |
                             The 32nd International Joint Conference on Artificial Intelligence </span><br>
                         <a class="tag" href="https://arxiv.org/pdf/2208.13579.pdf" target="_blank">pdf</a><span
