Update ICBM citation

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                         <span class="conf"><a class="confshort" href="https://aaai-23.aaai.org/">AAAI
                                 2023</a> |
                             The 37th AAAI Conference on Artificial Intelligence </span><br>
-                        <a class="tag" href="https://arxiv.org/pdf/2212.07430.pdf" target="_blank">pdf</a><span
+                        <a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/25736/25508" target="_blank">pdf</a><span
                             class="tagsep"> |</span>
-                        <a class="tag" href="https://arxiv.org/abs/2212.07430" target="_blank">abstract</a><span
+                        <a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/25736" target="_blank">abstract</a><span
                             class="tagsep"> |</span>
                         <a class="tag" href="https://github.com/google-research/google-research/tree/master/interactive_cbms"
                             target="_blank">code</a><span class="tagsep"> |</span>
