Add role change

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                 </div>
             </div>
             <div class="col-md-8 pt-5 about">
-                I am a Research Software Engineer at <a class="in-text"
+                I am currently working as a Research Engineer at <a class="in-text"
+                href="https://deepmind.google/" target="_blank">Google DeepMind</a>. Before this, I was at <a class="in-text"
                     href="https://research.google/teams/india-research-lab/" target="_blank">Google Research</a>
                 working with <a class="in-text" href="https://scholar.google.co.in/citations?user=pWE12D4AAAAJ"
-                    target="_blank">Dr. Aravindan Raghuveer</a> on privacy preserving deep learning. Before this, I was
-                a Pre-Doctoral Researcher at Google Research, where I worked with <a class="in-text"
+                    target="_blank">Dr. Aravindan Raghuveer</a> and <a class="in-text"
                     href="https://scholar.google.co.in/citations?user=lXbPKmkAAAAJ" target="_blank">Dr. Pradeep
-                    Shenoy</a> on robust and interpretable deep learning. <br>
+                    Shenoy</a> on deep learning privacy, robustness and interpretablity. <br>
                 <br>
 
 
@@ -218,9 +218,14 @@
 
                 <div class="row text-center py-4">
                     <div class="mx-auto mt-2">
+                        <img class="img-fluid instilogo p-2" src="images/gdm.png">
+                        <div class="institution">Google DeepMind</div>
+                        <div class="years">May 2024 - Present</div>
+                    </div>
+                    <div class="mx-auto mt-2">
                         <img class="img-fluid instilogo p-3" src="images/googleresearch.png">
                         <div class="institution">Google Research</div>
-                        <div class="years">Aug 2020 - Present</div>
+                        <div class="years">Aug 2020 - May 2024</div>
                     </div>
                     <div class="mx-auto mt-2">
                         <img class="img-fluid instilogo p-2" src="images/sharechat.png">
